# PerfectShow

./: .gitignore  .gitmodules  AndroidManifest.xml  LICENSE  README.md  ant.properties  build.gradle  build.xml  gradle.properties  import-summary.txt  proguard.cfg  project.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/cascades/: haarcascade_mcs_lefteye.xml
app/src/main/cpp/: Android.mk  CMakeLists (copy).txt  CMakeLists.txt
app/src/main/cpp/platform/android/: Effect.cpp  Effect.h  Feature.cpp  Feature.h  Makeup.cpp  Makeup.h
app/src/main/cpp/platform/x86/: main.cpp  makeup.cpp  utility.cpp  utility.h
app/src/main/cpp/stasm/: classicdesc.cpp  convshape.h  err.cpp  eyedet.h  eyedist.cpp  hatdesc.h  landmarks.h  misc.cpp  misc.h  pinstart.cpp  print.cpp  shape17.h  shapemod.h  startshape.cpp  stasm.h
app/src/main/cpp/stasm/MOD_1/mh/: yaw00.mh  yaw00_lev0_p01_classic.mh  yaw00_lev0_p02_classic.mh  yaw00_lev0_p09_classic.mh  yaw00_lev0_p10_classic.mh  yaw00_lev0_p21_hat.mh  yaw00_lev0_p23_hat.mh  yaw00_lev0_p24_hat.mh  yaw00_lev0_p36_hat.mh  yaw00_lev0_p37_hat.mh  yaw00_lev0_p38_hat.mh  yaw00_lev0_p40_hat.mh  yaw00_lev0_p43_hat.mh  yaw00_lev0_p44_hat.mh  yaw00_lev0_p46_hat.mh  yaw00_lev0_p48_hat.mh  yaw00_lev0_p50_hat.mh  yaw00_lev0_p53_hat.mh  yaw00_lev0_p55_hat.mh  yaw00_lev0_p61_hat.mh  yaw00_lev0_p63_hat.mh  yaw00_lev0_p67_hat.mh  yaw00_lev0_p76_hat.mh  yaw00_lev1_p00_classic.mh  yaw00_lev1_p02_classic.mh  yaw00_lev1_p03_classic.mh  yaw00_lev1_p07_classic.mh  yaw00_lev1_p08_classic.mh  yaw00_lev1_p11_classic.mh  yaw00_lev1_p14_classic.mh  yaw00_lev1_p15_classic.mh  yaw00_lev1_p18_hat.mh  yaw00_lev1_p20_hat.mh  yaw00_lev1_p23_hat.mh  yaw00_lev1_p27_hat.mh  yaw00_lev1_p45_hat.mh  yaw00_lev1_p47_hat.mh  yaw00_lev1_p50_hat.mh  yaw00_lev1_p53_hat.mh  yaw00_lev1_p60_hat.mh  (+44 more)
app/src/main/cpp/venus/: Beauty.cpp  CMakeLists.txt  Effect.cpp  Feature.cpp  Feature.h  ImageWarp.cpp  Makeup.cpp  Makeup.h  Region.cpp  Region.h  blend.h  blur.cpp  blur.h  colorspace.cpp  compiler.h  inpaint.h  opencv_utility.cpp  opencv_utility.h  scalar.h
app/src/main/res/drawable/: back.xml  crop_shadow_upside.xml  eye_brow.xml  iris.xml  ratio_3_4.xml  round_rect.xml
app/src/main/res/layout/: color_picker.xml  color_picker_dialog.xml  gallery_activity.xml  main_activity.xml  makeup_activity.xml  title_bar.xml
app/src/main/res/menu/: image_crop_activity.xml
app/src/main/res/raw/: haarcascade_frontalface_alt2.xml  haarcascade_mcs_mouth.xml
app/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml  themes.xml
assets/cascades/: haarcascade_frontalface_alt2.xml  haarcascade_mcs_righteye.xml
gradle/wrapper/: gradle-wrapper.properties
iShow/: build.gradle
iShow/src/main/assets/cascades/: haarcascade_mcs_mouth.xml
iShow/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
iShow/src/main/cpp/stasm/: basedesc.h  (+12 more)
iShow/src/main/cpp/venus/: CMakeLists.txt  Effect.h  blend.cpp  blend.h  compiler.h
jni/: Android.mk  Application.mk  CMakeLists.txt
jni/example/: beauty.cpp  beauty.h  effect.cpp  effect.h  main.cpp  makeup.cpp  makeup.h  utility.cpp  utility.h
jni/platform/: com_cloudream_ishow_algorithm_Effect.cpp  com_cloudream_ishow_algorithm_FaceDetector.cpp  com_cloudream_ishow_algorithm_FaceDetector.h  com_cloudream_ishow_algorithm_Feature.cpp  com_cloudream_ishow_algorithm_Feature.h  com_cloudream_ishow_algorithm_Makeup.cpp  com_cloudream_ishow_algorithm_Makeup.h  com_cloudream_ishow_gpuimage_GPUImageNativeLibrary.c  jni_bridge.cpp  jni_bridge.h
jni/stasm/: Android.mk  asm.cpp  asm.h  convshape.cpp  err.cpp  eyedet.cpp  hat.cpp  hat.h  landmarks.cpp  landtab_muct77.h  shapemod.cpp  startshape.h  stasm_lib.cpp  stasm_lib_ext.h
jni/stasm/MOD_1/: facedet.h  initasm.cpp
jni/stasm/MOD_1/mh/: yaw00_lev0_p04_classic.mh  yaw00_lev0_p05_classic.mh  yaw00_lev0_p06_classic.mh  yaw00_lev0_p08_classic.mh  yaw00_lev0_p12_classic.mh  yaw00_lev0_p13_classic.mh  yaw00_lev0_p14_classic.mh  yaw00_lev0_p15_classic.mh  yaw00_lev0_p16_hat.mh  yaw00_lev0_p17_hat.mh  yaw00_lev0_p18_hat.mh  yaw00_lev0_p19_hat.mh  yaw00_lev0_p27_hat.mh  yaw00_lev0_p28_hat.mh  yaw00_lev0_p33_hat.mh  yaw00_lev0_p42_hat.mh  yaw00_lev0_p45_hat.mh  yaw00_lev0_p49_hat.mh  yaw00_lev0_p54_hat.mh  yaw00_lev0_p56_hat.mh  yaw00_lev0_p57_hat.mh  yaw00_lev0_p58_hat.mh  yaw00_lev0_p60_hat.mh  yaw00_lev0_p62_hat.mh  yaw00_lev0_p64_hat.mh  yaw00_lev0_p65_hat.mh  yaw00_lev0_p66_hat.mh  yaw00_lev0_p68_hat.mh  yaw00_lev0_p70_hat.mh  yaw00_lev0_p71_hat.mh  yaw00_lev0_p74_hat.mh  yaw00_lev0_p75_hat.mh  yaw00_lev1_p01_classic.mh  yaw00_lev1_p04_classic.mh  yaw00_lev1_p05_classic.mh  yaw00_lev1_p06_classic.mh  yaw00_lev1_p09_classic.mh  yaw00_lev1_p12_classic.mh  yaw00_lev1_p16_hat.mh  yaw00_lev1_p21_hat.mh  (+101 more)
jni/venus/: Beauty.cpp  Beauty.h  Effect.cpp  Effect.h  Extractor.cpp  Extractor.h  Feature.cpp  Feature.h  ImageWarp.cpp  ImageWarp.h  Makeup.cpp  Makeup.h  Region.cpp  Region.h  blend.cpp  blend.h  color_space.cpp  color_space.h  colorspace.cpp  colorspace.h  common.h  compiler.h  inpaint.cpp  inpaint.h  opencv_utility.cpp  opencv_utility.h  region_operation.cpp  region_operation.h  scalar.h  vec2.h  vec3.h  vec4.h
res/color/: selector_radio_button.xml
res/drawable/: blush.xml  blusher.xml  button_normal.xml  circle.xml  color_picker_target.xml  crop.xml  eye_lash.xml  lip.xml  lip_color.xml  ratio_16_9.xml  ratio_1_1.xml  ratio_2_3.xml  ratio_4_3.xml  ratio_free.xml  vector_loader.xml  vector_loader_animated.xml
res/layout/: activity_image_crop.xml  color_picker_dialog.xml  crop_view.xml  gallery_activity.xml  main_activity.xml  makeup2_activity.xml  makeup_activity.xml  title_bar.xml
res/menu/: header.xml
res/raw/: haarcascade_frontalface_alt2.xml  haarcascade_mcs_lefteye.xml  haarcascade_mcs_mouth.xml  haarcascade_mcs_righteye.xml
res/values/: arrays.xml  attrs.xml  color_arrays.xml  colors.xml  dimens.xml  plurals.xml  strings.xml  styles.xml  themes.xml
src/com/cloudream/ishow/: App.java
tool/: drawable_selector.py
(+329 files in other folders)
